// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MastheadSearchForm invalid id at the end of the url 1`] = `
<form
  className="c-masthead-editorial__form"
  onSubmit={[Function]}
>
  <input
    className="c-masthead-editorial__form-query"
    onChange={[Function]}
    placeholder=""
    type="text"
    value="https://ndla-frontend.test.api.ndla.no/article/urn:subject:100/urn:topic:1:179373/urn:resource:1:16838"
  />
  <button
    className="c-button c-button--stripped c-masthead-editorial__form-button"
    disabled={false}
    type={undefined}
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on ndla node id pasted 1`] = `
<form
  className="c-masthead-editorial__form"
  onSubmit={[Function]}
>
  <input
    className="c-masthead-editorial__form-query"
    onChange={[Function]}
    placeholder=""
    type="text"
    value="#4737"
  />
  <button
    className="c-button c-button--stripped c-masthead-editorial__form-button"
    disabled={false}
    type={undefined}
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on ndla url paste with id at the end 1`] = `
<form
  className="c-masthead-editorial__form"
  onSubmit={[Function]}
>
  <input
    className="c-masthead-editorial__form-query"
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
  <button
    className="c-button c-button--stripped c-masthead-editorial__form-button"
    disabled={false}
    type={undefined}
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on ndla url paste with taxonomy id at the end 1`] = `
<form
  className="c-masthead-editorial__form"
  onSubmit={[Function]}
>
  <input
    className="c-masthead-editorial__form-query"
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
  <button
    className="c-button c-button--stripped c-masthead-editorial__form-button"
    disabled={false}
    type={undefined}
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on old ndla url paste with new id 1`] = `
<form
  className="c-masthead-editorial__form"
  onSubmit={[Function]}
>
  <input
    className="c-masthead-editorial__form-query"
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
  <button
    className="c-button c-button--stripped c-masthead-editorial__form-button"
    disabled={false}
    type={undefined}
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;
